creat and add foods drinks , choose and uupdate and clear any food .

--- a/Resturant-project-AD0079/Resturant-project-AD0079.csproj
+++ b/Resturant-project-AD0079/Resturant-project-AD0079.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Update.Designer.cs">
       <DependentUpon>Update.cs</DependentUpon>
     </Compile>
+    <Compile Include="Updatfood.cs" />
     <Compile Include="User.cs" />
     <EmbeddedResource Include="Apdate.resx">
       <DependentUpon>Apdate.cs</DependentUpon>
